# taco_experiment

./: .gitignore  README.md  RESULTS.md  RUNPOD.md  project_context.md  pyproject.toml
results/full_100/: RESULTS.md  diversity_metrics.json  generations.jsonl  report.json
results/full_100_7b/: diversity_metrics.json  execution.jsonl  generations.jsonl  sample_meta.json
results/full_100_7b_pless/: generations.jsonl
results/full_100_7b_pless_norm/: execution.jsonl  generations.jsonl  report.json
results/smoke_test_20_7b/: diversity_metrics.json  pass_at_k.json  report.json
results/smoke_test_20_7b_pless/: execution.jsonl  pass_at_k.json  report.json
results/smoke_test_20_7b_pless_norm/: generations.jsonl  report.json
results/taco/qwen2.5-coder-3b/full_100/: execution.jsonl  pass_at_k.json
results/taco/qwen2.5-coder-3b/smoke_test_20/: RESULTS.md  diversity_metrics.json  execution.jsonl  generations.jsonl  pass_at_k.json  report.json
results/taco/qwen2.5-coder-7b/full_100/: pass_at_k.json  report.json
results/taco/qwen2.5-coder-7b/full_100_pless/: diversity_metrics.json  execution.jsonl  pass_at_k.json  report.json
results/taco/qwen2.5-coder-7b/full_100_pless_norm/: diversity_metrics.json  pass_at_k.json
scripts/: recalc_exclude_image.py  run_all_methods.sh  view_comparison.py  view_problems.py
src/taco_experiment/: config.py  data.py  diversity.py  execute.py  generate.py  p_less_processors.py  pipeline.py
src/taco_experiment/metrics/: pyext2.py  testing_util.py
tests/: test_data.py  test_diversity.py  test_execute.py
(+7 files in other folders)
